--- a/src/app/dashboard-bars/sidebar/sidebar.component.html
+++ b/src/app/dashboard-bars/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="init-bar w-40 h-screen 
+<div class="init-bar w-40 h-full 
   flex flex-col bg-blue-900 text-white">
        
       <div class="w-full logo flex-justify mb-10">
@@ -7,35 +7,35 @@
       </div>
 
       <ul class="h-auto flex items-center flex-col justify-around btns">
-        <li class=" flex-justify mb-2 hover:bg-blue-600">
+        <li class=" flex-justify mb-2 hover:bg-blue-600" routerLinkActive='active'>
           <a routerLink='user' class="text-sm flex-col flex-justify">
             <i class="fas fa-home text-3xl"></i>
              User Dashboard
           </a>
         </li >
         <!-- --------------------------- -->
-        <li class=" flex-justify mb-2 hover:bg-blue-600">
+        <li class=" flex-justify mb-2 hover:bg-blue-600" routerLinkActive='active'>
           <a routerLink='transactions'class="text-sm flex-col flex-justify">
             <i class="far fa-clock text-3xl"></i>
             Transactions
           </a>
         </li>
         <!-- --------------------------- -->
-        <li class=" flex-justify mb-2 hover:bg-blue-600">
+        <li class=" flex-justify mb-2 hover:bg-blue-600" routerLinkActive='active'>
           <a routerLink='frequency' class="text-sm flex-col flex-justify">
             <i class="fas fa-bolt text-3xl"></i>
             Frequency
           </a>
         </li>
         <!-- --------------------------- -->
-        <li class=" flex-justify mb-2 hover:bg-blue-600">
+        <li class=" flex-justify mb-2 hover:bg-blue-600" routerLinkActive='active'>
           <a routerLink='summary' class="text-sm flex-col flex-justify">
             <i class="far fa-calendar-alt text-3xl"></i>
             Summary
           </a>
         </li>
         <!-- --------------------------- -->
-        <li class="flex-justify  hover:bg-blue-600">
+        <li class="flex-justify  hover:bg-blue-600" routerLinkActive='active'>
           <a routerLink='super-user' class="text-sm flex-justify flex-col">
             <i class="fas fa-user-ninja text-3xl"></i>
             SuperUser
