--- a/src/app/dashboard/main-dashboard/main-dashboard.component.html
+++ b/src/app/dashboard/main-dashboard/main-dashboard.component.html
@@ -1,7 +1,7 @@
-<div class="flex-justify h-screen w-full test">
+<div class="flex-justify h-full w-full test">
 
   <!-- Start Sidebar -->
-  <div class="">
+  <div class="h-full">
     <sidebar-component></sidebar-component>
   </div>
   <!-- End Sidebar -->
@@ -22,7 +22,6 @@
   </div>
   
 </div>
-
 
 
 
