--- a/src/app/dashboard/super-user/super-user.component.html
+++ b/src/app/dashboard/super-user/super-user.component.html
@@ -1,1 +1,107 @@
-<div>SuperUser Component</div>
+<div class="h-full flex items-center w-full flex-col">
+
+    <div class=" shadow-lg py-6 p-5 bg-white border border-gray-300 rounded-xl box-width h-auto flex items-center justify-between flex-col w-auto mx-10">
+        <!-- page filters start -->
+        <div class="w-full h-auto flex items-center justify-around flex-wrap mb-4 ">
+            <div class="flex items-center flex-col w-52 mb-4 mr-4">
+                <div class="text-sm w-full flex justify-between mb-1 text-gray-500 ">
+                    Name 
+                    <div>
+                        <i class="fas fa-long-arrow-alt-up text-sm text-gray-500 hover:text-blue-600 cursor-pointer"></i>
+                        <i class="fas fa-long-arrow-alt-down text-sm ml-1 text-gray-500 hover:text-blue-600 cursor-pointer"></i>
+                    </div>
+                </div>
+                <div class="flex-justify w-full relative mb-1">
+                    <input type="text" placeholder="Search..." class="bg-gray-200 w-full  rounded-lg text-sm text-blue-900 font-normal placeholder-gray-500 pl-7 border-none outline-none focus:bg-white" [(ngModel)] = 'filterName'>
+                    <div class="absolute top-1.5 left-2">
+                        <i class="fas fa-search text-sm text-gray-500 w-4"></i>
+                    </div>
+                </div>
+                <p class="text-sm w-full text-gray-500 overflow-hidden h-5">
+                    Filterd by: {{filterName}}
+                </p>
+            </div>
+            <!-- -------------------------------------------- -->
+            <div class="flex items-center flex-col w-52 mb-4 mr-4">
+                <div class="text-sm w-full flex justify-between mb-1 text-gray-500 ">
+                    Role
+                    <div>
+                        <i class="fas fa-long-arrow-alt-up text-sm text-gray-500 hover:text-blue-600 cursor-pointer"></i>
+                        <i class="fas fa-long-arrow-alt-down text-sm ml-1 text-gray-500 hover:text-blue-600 cursor-pointer"></i>
+                    </div>
+                </div>
+                <div class="flex-justify w-full relative mb-1">
+                    <input type="text" placeholder="Search..." class="bg-gray-200 w-full  rounded-lg text-sm text-blue-900 font-normal placeholder-gray-500 pl-7 border-none outline-none focus:bg-white" [(ngModel)] = 'filterRole'>
+                    <div class="absolute top-1.5 left-2">
+                        <i class="fas fa-search text-sm text-gray-500 w-4"></i>
+                    </div>
+                </div>
+                <p class="text-sm w-full text-gray-500 overflow-hidden h-5">
+                    Filterd by: {{filterRole}}
+                </p>
+            </div>
+            <!-- -------------------------------------------- -->
+            <div class="flex items-center flex-col w-52 mb-4">
+                <div class="text-sm w-full flex justify-between mb-1 text-gray-500 ">
+                    Permission
+                    <div>
+                        <i class="fas fa-long-arrow-alt-up text-sm text-gray-500 hover:text-blue-600 cursor-pointer"></i>
+                        <i class="fas fa-long-arrow-alt-down text-sm ml-1 text-gray-500 hover:text-blue-600 cursor-pointer"></i>
+                    </div>
+                </div>
+                <div class="flex-justify w-full relative mb-1">
+                    <input type="text" placeholder="Search..." class="bg-gray-200 w-full  rounded-lg text-sm text-blue-900 font-normal placeholder-gray-500 pl-7 border-none outline-none focus:bg-white" [(ngModel)] = 'filterPerm'>
+                    <div class="absolute top-1.5 left-2">
+                      <i class="fas fa-search text-sm text-gray-500 w-4"></i>
+                    </div>
+                </div>
+                <p class="text-sm w-full text-gray-500 overflow-hidden h-5">
+                    Filterd by: {{filterPerm}}
+                </p>
+            </div>
+
+            
+        </div>
+        <!-- page filters end -->
+
+        <!-- page boxes start -->
+        <div class="mb-4 flex justify-around flex-wrap h-auto w-full">
+            <div class="w-52 h-52 mb-4 flex justify-between flex-col items-center p-2.5 rounded-2xl bg-white shadow-lg hover:bg-blue-900 cursor-pointer hover:text-white" *ngFor = 'let user of filteredUsers'>
+                <div class="w-full h-full overflow-hidden flex justify-center items-center rounded-2xl">
+                    <img [src]='user.profile_picture' [title]='user.role' class=" w-full rounded-2xl max-h-32">
+                </div>
+                <div class="flex justify-between flex-col w-full">
+                    <p class="text-base font-medium border-b border-yellow-500 pb-0.5">{{user.first_name + ' ' + user.last_name}}</p>
+                    <p class="text-sm font-normal border-b border-yellow-500 pb-0.5">Role: <span class="text-sm">{{user.role}}</span></p>
+                    <p class="text-sm font-normal ">Permision: <span class="text-sm">{{user.permissions}}</span></p>
+                </div>
+            </div>
+        </div>
+        <!-- page boxes end -->
+
+        <!-- page navigation start -->
+        <nav class="bg-white flex items-center justify-between border-t border-gray-200 page-nav w-full ">
+            <div class="relative w-28 h-4 font-medium">
+                <a class=" page-nav-btns">
+                    <i class="fas fa-arrow-left mr-2 text-sm"></i>
+                    Previous
+                </a>
+            </div>
+
+            <div class="relative w-10 h-4 font-medium">
+                <span class="page-nav-btns">1</span>
+            </div>
+
+            <div class="relative w-28 h-4 font-medium">
+                <a class="page-nav-btns">
+                    Next
+                    <i class="fas fa-arrow-right ml-2 text-sm"></i>
+                </a>
+            </div>
+            
+        </nav>
+        <!-- page navigation end -->
+    </div>
+    
+</div>
+
