ngrx solution implemented

--- a/src/app/dashboard-bars/navbar/navbar.component.html
+++ b/src/app/dashboard-bars/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<div class="w-full h-16 bg-blue-600 navbar flex-justify">
-    <nav class="container flex items-center justify-between mx-9">
+<div class="w-full bg-blue-600 navbar flex-justify">
+    <nav class=" h-full container flex items-center justify-between mx-9">
 
-      <div class="flex-justify w-auto ">
+      <div class="flex-justify w-auto">
         <input type="text" placeholder="Search..." class="bg-white px-3 w-80 h-10 rounded-l-lg btn-height text-sm text-gray-900 border-none font-medium">
         <button class="w-10 btn-height bg-white rounded-r-lg border-none flex-justify">
           <i class="fas fa-search text-lg text-blue-600  hover:text-yellow-500"></i>
