--- a/src/app/dashboard-bars/sidebar/sidebar.component.html
+++ b/src/app/dashboard-bars/sidebar/sidebar.component.html
@@ -1,5 +1,4 @@
-<div class="init-bar w-40 h-full 
-  flex flex-col bg-blue-900 text-white">
+<div class="init-bar w-40 h-full flex flex-col justify-start bg-blue-900 text-white">
        
       <div class="w-full logo flex-justify mb-10">
         <i class="fas fa-dove text-lg text-yellow-500 mr-2"></i>
