--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -52,7 +52,7 @@
             </div>
             
             <button type="submit" class=" group relative w-full flex justify-center items-center py-1 px-4 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-offset-2   focus:ring-yellow-500 btn-height">
-            <a routerLink='/main-dashboard' class="text-sm ">Login <i class="fas fa-arrow-right ml-2"></i></a> 
+            <a routerLink='/main-dashboard' class="text-sm ">Create Account <i class="fas fa-arrow-right ml-2"></i></a> 
             </button>
   
           </form>
