--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,15 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 *{
     box-sizing: border-box;
     margin: 0;
     font-size: 16px;
+}
+
+.cdk-overlay-backdrop.cdk-overlay-backdrop-showing.dark-backdrop {
+    background: rgb(46, 45, 45);
+    opacity: 0.85 !important;
 }
